--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <script src="client.js"></script>
 </head>
 <body>
-
+  <div id ="contentDiv" class="container">
+    <h1>Code Challenge Week 1</h1>
+    <button id="createButton">Create!</button>
+  </div>
 </body>
 </html>
