--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Code Challenge Week 1</title>
+  <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
     crossorigin="anonymous"></script>
@@ -14,6 +15,7 @@
   <div id ="contentDiv" class="container">
     <h1>Code Challenge Week 1</h1>
     <button id="createButton">Create!</button>
+    <br>
   </div>
 </body>
 </html>
